--- a/html-css/css/form.css
+++ b/html-css/css/form.css
@@ -1,27 +1,61 @@
-#first-name, #last-name, #email{
+.container{
+    width:1000px;
+}
+
+#first-name, #last-name, #email, #about {
     display: block;
     margin: 5px 2px;
 }
-h2{
+
+h2 {
     font-size: 40px;
 }
 
-input[type=submit]{
+input{
+    box-sizing: border-box;
+}
+input[type=submit] {
     border: transparent;
     padding: 10px 30px;
+    display: block;
+    margin-left: auto;
 }
 
-input[type=text], input[type=email]{
-    padding: 10px 20px;
+input[type=text], input[type=email] {
+    padding:5px;
+    height: 25px;
+    width: 100%;
 }
 
-form{
+#about {
+    padding:5px;
+    height: 150px;
+    width: 100%;
+}
+
+#email {
+    text-align: left;
+}
+
+form {
     background-color: #5cd0b9;
     width: 40%;
     margin: auto;
     padding: 20px;
 }
 
-textarea{
-    resize:none;
+textarea {
+    resize: none;
+}
+
+.left-box{
+    width: 50%;
+    float: left;
+}
+.right-box{
+    width: 50%;
+    float: right;
+}
+.clear{
+    clear: both;
 }
