--- a/html-css/css/0908.css
+++ b/html-css/css/0908.css
@@ -18,20 +18,48 @@
     height: 100%;
     background-color: rgba(0,0,0,0.5);
     opacity: 0;
-    top:-1.2px;
     transition: all 1s;
 }
 .overlay:hover{
     opacity:100%;
 }
 
+.image-container{
+    width: 280px;
+    height: 280px;
+
+    overflow: hidden;
+}
 .box img{
     width: 100%;
+    height: 100%;
+    object-fit: cover;
+
 }
 
 .bg-grey{
     background-color: #e0dacf;
 }
+
+
+.slide{
+    position: absolute;
+    width: 100%;
+    height: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 3rem;
+    background-color: red;
+    transition: all 1s;
+    bottom: -50%;
+    overflow: hidden;
+}
+
+.another:hover .slide{
+    bottom: 0px;
+}
+
 
 @media screen and (max-width: 768px){
     .box{
